upgrade jdk version from 1.8 to 19